# Synapse-monorepo

./: .env.example  .env.me  .env.vault  .gitignore  CODE-OF-CONDUCT.md  CONTRIBUTING.md  DW-Welcome.md  Guide.MD  POETRY_CONFIG.md  README.md  __VERSION__.py  aiIntegration.ts  dev.env  docker-compose.yml  dotenv-vault.md  generate-compose.sh  microservices_list.md  package-lock.json  package.json  prod.env  static-analysis.datadog.yml  tsconfig.json
.circleci/: config.yml
.devcontainer/: vscodeextensions.txt
.devcontainer/base/: devcontainer.json
.devcontainer/node/: Dockerfile  devcontainer.json
.devcontainer/python/: Dockerfile  devcontainer.json
.github/: FILEHEADER  FILEHEADER.txt  checkout-README.md  unit-testing-customactions.md
.github/workflows/: action.yaml  code-quality.yml  header-comments.yaml  js-action-template.yml  pull-request-tests.yml  trescommas-push.yml
CF-AIGateway/: README.md  package-lock.json  package.json
SynAPIGateway/: README.md
SynAPIGateway/kong-development/: synavate_api_gateway-v1.0.yaml
_ENV/es-docker-env/: .env  .env.me
_ENV/main-env/: .env  .env.me  .env.previous  main.env  main.env.me
backend/ApiClass/: ApiClass.py  README.md  pyproject.toml  usingBaseClass.md
backend/DataProcessingService/: .env
backend/KnowledgeGraphGen/: .env  fedj-cog-graph.py  nlp_constants.py  pyproject.toml
backend/KnowledgeGraphGen/src/: fedj-cog-graph.py  pyconfig.py
backend/LLMProcessingService/: pyproject.toml
backend/LLMProcessingService/.devcontainer/: devcontainer.json
backend/LLMProcessingService/src/: app.py  orm_config.py
frontend/DataVizD3/: README.md
frontend/UserDashboardUI/: .dockerignore  .gitignore  Dockerfile  README.md  package-lock.json  package.json  package.json.bak
frontend/VeridaConnectSDK/: .gitignore  .nvmrc  lerna.json  package copy.json  package.json  publish.sh
libs/: .gitignore
libs/shared/src/DataPipelineService/: .gitignore  db.env  pyproject.toml
libs/shared/src/DataPipelineService/Qdrant/: embeddings.py  qdrant_client.py
libs/shared/src/OpticNerveObservability/: docker-compose.yml  elk.env  pyproject.toml
libs/shared/src/OpticNerveObservability/elk-stack/: esc-logging.py
libs/shared/src/OpticNerveObservability/es-docker/: docker-compose.yml  elk.dev.env  filebeat.yml
services/KnowledgeGraphGen/: pyproject.toml
shared/UserAccountPipeline/: README.md
shared/config/: config.json
(+318 files in other folders)
