[tool.poetry]
name = "synapseapiclass"
version = "0.1.0"
description = "An Application Server for Synapse Services"
authors = ["snyata <core@synavate.tech>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.109.0"
pydantic = "^2.6.0"
python-dotenv = "^1.0.1"
uvicorn = "^0.27.0.post1"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
