[tool.poetry]
name = "llmprocessing"
version = "0.1.0"
description = ""
authors = ["snyata <p4rlx-news@pm.me>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pynest-api = "^0.1.2"
motor = "^3.3.2"
beanie = "^1.25.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
