[tool.poetry]
name = "opticnerveobs"
version = "0.1.0"
description = "Observability and loggging with the ELK stack"
authors = ["snyata <core@synavate.tech>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
ecs-logging = "^2.1.0"
elasticsearch = "^8.12.0"
python-dotenv = "^1.0.1"
python-logstash-async = "^2.7.2"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
typing = "^3.10.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
